# guile-gitlab

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  configure.ac  guix.scm
build-aux/am/: Makefile.am
build-aux/m4/: Makefile.am
modules/: Makefile.am  gitlab.scm
modules/gitlab/: Makefile.am  client.scm  common.scm  gitlab.scm  session.scm  user.scm
modules/gitlab/api/: Makefile.am  common.scm  group.scm  project.scm  user.scm  version.scm
modules/gitlab/cli/: Makefile.am  common.scm  group.scm  project.scm  user.scm  version.scm
tests/: Makefile.am  common.scm
utils/: .gitignore  Makefile.am  gitlab-cli  gitlab-cli.in  gitlab-cli.scm
